<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewFigNumSet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/yellow"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/numFigures"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="30dp"

                android:layout_weight="1"
                android:contentDescription="@string/triangleimage"
                app:srcCompat="@drawable/triangle"
                />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/circleimage"
                app:srcCompat="@drawable/checkbox_blank_circle"
                />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/squareimage"
                app:srcCompat="@drawable/square"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/numTriangle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/numTri"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/numCircle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:text="@string/numCircle"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/numSquare"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20sp"
                android:layout_weight="1"
                android:text="@string/numSquare" />
        </TableRow>

        <TextView
            android:id="@+id/viewRangeSet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@color/yellow"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/totaArea"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="30dp"

                android:layout_weight="1"
                android:contentDescription="@string/triangleimage"
                app:srcCompat="@drawable/triangle" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="30dp"

                android:layout_weight="1"
                android:contentDescription="@string/circleimage"
                app:srcCompat="@drawable/checkbox_blank_circle" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                                android:layout_weight="1"
                android:contentDescription="@string/squareimage"
                app:srcCompat="@drawable/square" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/areaTriangle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20sp"
                android:layout_weight="1"
                android:text="@string/areaTri" />

            <TextView
                android:id="@+id/areaCircle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20sp"
                android:layout_weight="1"
                android:text="@string/areaCircle" />

            <TextView
                android:id="@+id/areaSquare"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20sp"
                android:layout_weight="1"
                android:text="@string/areaSquare"
                />
        </TableRow>

        <TextView
            android:id="@+id/viewCharStats"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@color/yellow"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/totalChar"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="30dp"

                android:layout_weight="1"
                android:contentDescription="@string/triangleimage"
                app:srcCompat="@drawable/triangle" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/circleimage"
                app:srcCompat="@drawable/checkbox_blank_circle" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/squareimage"
                app:srcCompat="@drawable/square" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/charTriangle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20sp"
                android:layout_weight="1"
                android:text="@string/charTri" />

            <TextView
                android:id="@+id/charCircle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20sp"
                android:layout_weight="1"
                android:text="@string/charCircle" />

            <TextView
                android:id="@+id/charSquare"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20sp"
                android:layout_weight="1"
                android:text="@string/charSquare" />
        </TableRow>

    </LinearLayout>


</ScrollView>