<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewFigNumSet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/textviewfignumber"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textFigNum"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/number_of_figures"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/viewRangeSet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/textViewSlider"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rangeSlider"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/slider"
            android:stepSize="0.01"
            android:valueFrom="0.00"
            android:valueTo="1.00"
            app:minSeparation="10.0dp"
            app:values="@array/initial_slider_values"
            />

        <Button
            android:id="@+id/applySettings"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="50dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/applySettings"
            android:textSize="20sp"
            android:backgroundTint="@color/yellow"
            android:textColor="@android:color/secondary_text_light"/>

    </LinearLayout>
    </ScrollView>